<resources>
    <string name="app_name">InaBox</string>
    <string name="description">In a Box means memorable gifts and products that you will love a lifetime. Hand-crafted by Romanian artists in limited series. Carefully selected for the smallest detail, however simple.</string>
    <string name="newsletter">Join the In a Box community!</string>
    <string name="emailAddress">Enter your email here</string>
    <string name="contact">You can reach us at salut@inabox.ro, or on the phone (+40)733 412 703 from Monday to Friday, 10 – 19</string>
    <string name="joinButton">Join Now</string>
</resources>
